pom fix mit failsafe